added material icons and a custom font

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,14 @@
-<p>
-  sidebar works!
-</p>
+<nav>
+  <ul>
+    <li>
+      <a router-link="">
+        <i class="material-icons">supervised_user_circle</i>
+      </a>
+    </li>
+    <li>
+      <a router-link="posts">
+        <i class="material-icons">message</i>
+      </a>
+    </li>
+  </ul>
+</nav>
