--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li>
-      <a router-link="">
+      <a routerLink="">
         <i class="material-icons">supervised_user_circle</i>
       </a>
     </li>
