--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@ nav {
   background-color: #2D2E2E;
   height: 100%;
   ul {
-    padding: 10px;
+    padding: 42px 10px 10px 10px;
     margin: 0;
     list-style-type: none !important;
     li {
