getUserDetails and present it in the details components

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,3 +1,17 @@
-<p>
-  details works!
-</p>
+<h1>{{user.name}}</h1>
+<ul>
+
+  <li>
+    <strong>Username:&nbsp; </strong>{{user.username}}
+
+  </li>
+  <li>
+    <strong>
+      email:&nbsp;
+    </strong>
+    {{user.email}}
+  </li>
+  <li>
+    <strong>phone: :&nbsp;</strong> {{user.phone}}
+  </li>
+</ul>
