--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -8,6 +8,7 @@
      padding: 20px;
      margin-bottom: 8px;
      a {
+       display: block;
        font-size: 1.5em;
        text-decoration: none;
        font-weight: bold;
@@ -18,10 +19,13 @@
        li {
          padding: 0;
          a {
-           padding-top: 10px !important;
-           color: black;
+           margin-top: 10px !important;
+           color: black !important;
            font-weight: 50;
-           font-size: 1em;
+           font-size: 0.8em;
+         }
+         .website {
+           color: rgb(151, 146, 146) !important;
          }
        }
      }
