--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,9 @@
-<p>
-  posts works!
-</p>
+<h1>Posts</h1>
+<ul>
+  <li class="post" *ngFor="let post of posts" (click)="postDetails(post)">
+    <h2 class="post-title">{{post.title}}</h2>
+    <p class="post-body">
+      {{post.body}} {{post.body}} {{post.body}} {{post.body}} {{post.body}} {{post.body}}
+    </p>
+  </li>
+</ul>
