styling active links

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -12,8 +12,8 @@ nav {
         color: #fff;
         display: block;
       }
-      .activated {
-        background-color: #00a8ff;
+      .active-link {
+        color: #00a8ff;
       }
     }
   }
