--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,12 +1,12 @@
 <nav>
   <ul>
     <li>
-      <a routerLink="users">
+      <a routerLink="users" routerLinkActive="active-link">
         <i class="material-icons">supervised_user_circle</i>
       </a>
     </li>
     <li>
-      <a routerLink="posts">
+      <a routerLink="posts" routerLinkActive="active-link">
         <i class="material-icons">message</i>
       </a>
     </li>
