--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,17 +1,19 @@
-<h1>{{user.name}}</h1>
-<ul>
+<div *ngIf="user">
+  <h1>{{user.name}}</h1>
+  <ul>
 
-  <li>
-    <strong>Username:&nbsp; </strong>{{user.username}}
+    <li>
+      <strong>Username:&nbsp; </strong>{{user.username}}
 
-  </li>
-  <li>
-    <strong>
-      email:&nbsp;
-    </strong>
-    {{user.email}}
-  </li>
-  <li>
-    <strong>phone: :&nbsp;</strong> {{user.phone}}
-  </li>
-</ul>
+    </li>
+    <li>
+      <strong>
+        email:&nbsp;
+      </strong>
+      {{user.email}}
+    </li>
+    <li>
+      <strong>phone: :&nbsp;</strong> {{user.phone}}
+    </li>
+  </ul>
+</div>
