--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,4 +1,5 @@
 <h1>Posts</h1>
+<button (click)="createPost()">text</button>
 <ul>
   <li class="post" *ngFor="let post of posts" (click)="postDetails(post)">
     <h2 class="post-title">{{post.title}}</h2>
