added some fields at the create post model and learned about a diffrent method to do two-way data binding

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,5 +1,5 @@
 <h1>Posts</h1>
-<button (click)="createPost()">text</button>
+<button class="btn btn-block btn-primary" (click)="createPost()">Create post</button>
 <ul>
   <li class="post" *ngFor="let post of posts" (click)="postDetails(post)">
     <h2 class="post-title">{{post.title}}</h2>
