--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,14 +1,39 @@
-<h2>Create Post</h2>
-
-<form id=formId (ngSubmit)="submitMethod()" #form="ngForm" novalidate>
+<div class="container">
+  <h2>Create Post</h2>
   <!-- turn off browser validation -->
-
-  <!-- <input type="text " required [(ngModel)]="post.title "></input> -->
-  <input type="text" name="post-title" [(ngModel)]="post.title" />
-  <br>
-  <textarea type="text" required name="post-body" [(ngModel)]="post.body"></textarea>
-  <br>
-  <button class="btn btn-large" type="submit" (keyup.enter)="submitMethod()">submit</button>
-</form>
+  <form id=formId (ngSubmit)="submitMethod()" #form="ngForm" novalidate>
+    <div class="form-group">
+      <label for="post-title">Title:</label>
+      <input type="text" class="form-control" name="post-title" [ngModel]="post.title" (ngModelChange)="titleToUpperCase($event)" />
+      <br>
+      <label for="post-body">Body:</label>
+      <textarea type="text" class="form-control" required name="post-body" [(ngModel)]="post.body"></textarea>
+      <br>
+    </div>
+    <div class="checkbox">
+      <label for="">Private?
+        <input type="checkbox" name="private-post" id="" [ngModel]="post.private" (ngModelChange)="test($event)" value="true">
+      </label>
+    </div>
+    <label for=""> now or later</label>
+    <div class="radio">
+      <label for="">later
+        <input type="radio" name="later-post" id="" [(ngModel)]="post.later" value="later">
+      </label>
+    </div>
+    <div class="radio">
+      <label for="">now
+        <input type="radio" name="later-post" id="" [(ngModel)]="post.later" value="now">
+      </label>
+    </div>
+    <div class="form-group">
+      <label for="">Language</label>
+      <select name="" id="" class="form-control" name="language" [(ngModel)]="post.language">
+        <option *ngFor="let option of options" [value]="option">{{option}}</option>
+      </select>
+    </div>
+    <button class="btn btn-primary" type="submit" (keyup.enter)="submitMethod()">submit</button>
+  </form>
+</div>
 
 pristine {{form.pristine}} dirty {{form.dirty}}
